bird pic and thumbnails

--- a/birds.html
+++ b/birds.html
@@ -36,3 +36,14 @@
                    
                   
                 </div>
+                <div>
+                  <img src="2.jpg" class="img-fluid" alt="cuckoo">
+                  <img src="Harlequin duck.jpg" class="img-fluid" alt="Harlequin Duck" >
+                  <img src="ice gull.jpg" class="img-fluid" alt="Ice gull">
+                </div>
+                <div>
+                  <img src="2.jpg" class="img-thumbnail" alt="cuckoo">
+                  <img src="Harlequin duck.jpg" class="img-thumbnail" alt="Harlequin duck">
+                  <img src="ice gull.jpg" class="img-thumbnail" alt="Ice Gull">
+
+                  </div>
