--- a/birds.html
+++ b/birds.html
@@ -46,3 +46,52 @@
                   <img src="Harlequin duck.jpg" class="img-thumbnail" alt="Harlequin duck">
                   <img src="ice gull.jpg" class="img-thumbnail" alt="Ice Gull">
                   </div>
+                  <table class="table table-striped table-bordered table-hover table-sm">
+                    <caption>Birds,Athletes and Lakes starting with my initials.</caption>
+                    <thead class="table-active">
+                      <tr>
+                        <th scope="col">Letter</th>
+                        <th scope="col">Bird</th>
+                        <th scope="col">Lake</th>
+                        <th scope="col">Athlete</th>
+                      </tr>
+                    </thead>
+                    <tbody>
+                      <tr class="table-primary">
+                        <th scope="row">C</th>
+                        <td>Cuckoo</td>
+                        <td>Canyon lake</td>
+                        <td>Chris Bosh</td>
+                      </tr>
+                      <tr class="table-warning">
+                        <th scope="row">H</th>
+                        <td>Harlequin Duck</td>
+                        <td>Harveys Lake</td>
+                        <td>Hedo Turkoglu</td>
+                      </tr>
+                      <tr class="table-danger">
+                        <th scope="row">I</th>
+                        <td>Iceland Gull</td>
+                        <td>Iliamna Lake</td>
+                        <td>LeBron James</td>
+                      </tr>
+                      <tr class="table-success">
+                        <th scope="row">T</th>
+                        <td>Tuamotu kingfisher</td>
+                        <td>Tahoe Lake</td>
+                        <td>Tim Duncan</td>
+                      </tr>
+                      <tr class="table-light">
+                        <th scope="row">T</th>
+                        <td>Treerunner</td>
+                        <td>Teshekpuk Lake</td>
+                        <td>Tony Parker</td>
+                      </tr>
+                      <tr class="table-info">
+                        <th scope="row">I</th>
+                        <td>Iago Sparrow (Isla)</td>
+                        <td>Iliamna Lake</td>
+                        <td>Ike Diogu</td>
+                      </tr>
+                    </tbody>
+                  </table>
