--- a/birds.html
+++ b/birds.html
@@ -95,3 +95,31 @@
                       </tr>
                     </tbody>
                   </table>
+                  <label>Buttons:</label>
+                  <br>
+
+                  <button class="btn">C</button>
+                  <button class="btn">H</button>
+                  <button class="btn">I</button>
+                  <button class="btn">T</button>
+                  <button class="btn">T</button>
+                  <button class="btn">I</button>
+
+                  <br>
+                  <label>Button Groups:</label>
+                  <div class="btn-toolbar" role="toolbar" aria-label="Toolbar with button groups">
+                    <div class="btn-group me-2 btn-success" role="group" aria-label="First group">
+                      <button type="button" class="btn ">C</button>
+                      <button type="button" class="btn ">H</button>
+                      <button type="button" class="btn ">I</button>
+
+                    </div>
+                    <div class="btn-group me-2 btn-warning" role="group" aria-label="Second group">
+                      <button type="button" class="btn ">T</button>
+                      <button type="button" class="btn ">T</button>
+                      
+                    </div>
+                    <div class="btn-group btn-danger" role="group" aria-label="Third group">
+                      <button type="button" class="btn ">I</button>
+                    </div>
+                  </div>
