--- a/birds.html
+++ b/birds.html
@@ -123,3 +123,14 @@
                       <button type="button" class="btn ">I</button>
                     </div>
                   </div>
+                  <br>
+                  <div class="dropdown">
+                    <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">
+                      Dropdown button
+                    </button>
+                    <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
+                      <li><a class="dropdown-item" href="basic.html">BASIC</a></li>
+                      <li><a class="dropdown-item" href="advanced.html">ADVANCED</a></li>
+                      
+                    </ul>
+                  </div>
