--- a/birds.html
+++ b/birds.html
@@ -14,6 +14,28 @@
               integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>
             </head>
             <body>
+
+              <nav class="navbar navbar-expand-md navbar-light bg-light">
+                <div class="container-fluid">
+                  <a class="navbar-brand" href="birds.html">Interesting Birds</a>
+                  <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                  </button>
+                  <div class="collapse navbar-collapse" id="navbarToggler">
+                    <ul class="navbar-nav mr-auto">
+                      <li class="nav-item">
+                        <a class="nav-link active" href="basic.html">BASIC</a>
+                      </li>
+                      <li class="nav-item">
+                        <a class="nav-link active" href="advanced.html">ADVANCED</a>
+                      </li>
+                    </ul>
+                    
+                  </div>
+                </div>
+              </nav>
+
+
                 <h1>Birds by Rohith Chittipoilu</h1>
                 <div class="container">
                     <div class="row">
