--- a/birds.html
+++ b/birds.html
@@ -175,3 +175,36 @@
                     </div>
                     <button type="submit" class="btn btn-primary">Submit</button>
                   </form>
+                  <br>
+                  <div class="row">
+                  <div class="card" style="width: 18rem;">
+                    <img src="2.jpg" class="card-img-top" alt="Cuckoo image">
+                    <div class="card-body">
+                      <h5 class="card-title">Cuckoo</h5>
+                      <p class="card-text">The cuckoos are generally medium-sized slender birds. Most species live in trees, though a sizeable minority are ground-dwelling. The family has a cosmopolitan distribution; the majority of species are tropical. Some species are migratory. The cuckoos feed on insects, insect larvae and a variety of other animals, as well as fruit. Some species are brood parasites, laying their eggs in the nests of other species and giving rise to the metaphor cuckoo's egg, but the majority of species raise their own young.
+                      </p>
+                      <a href="https://en.wikipedia.org/wiki/Cuckoo" class="btn btn-primary">About</a>
+                    </div>
+                  </div>
+                  <div class="card" style="width: 18rem;">
+                  <img src="Harlequin duck.jpg" class="card-img-top" alt="Harlequin Duck image">
+                    <div class="card-body">
+                      <h5 class="card-title">Harlequin Duck</h5>
+                      <p class="card-text">The harlequin duck (Histrionicus histrionicus) is a small sea duck. It takes its name from Harlequin (French Arlequin, Italian Arlecchino), a colourfully dressed character in Commedia dell'arte. The species name comes from the Latin word "histrio", meaning "actor". In North America it is also known as lords and ladies. Other names include painted duck, totem pole duck, rock duck, glacier duck, mountain duck, white-eyed diver, squeaker and blue streak.
+                      </p>
+                      <a href="https://en.wikipedia.org/wiki/Harlequin_duck" class="btn btn-primary">About</a>
+                    </div>
+                  </div>
+                  <div class="card" style="width: 18rem;">
+                    <img src="ice gull.jpg" class="card-img-top" alt="Iceland Gull image">
+                    <div class="card-body">
+                      <h5 class="card-title">Iceland Gull</h5>
+                      <p class="card-text">The Iceland gull (Larus glaucoides) is a medium-sized gull that breeds in the Arctic regions of Canada and Greenland, but not in Iceland (as its name suggests), where it is only seen during winter. The genus name is from Latin larus, which appears to have referred to a gull or other large seabird. The specific name glaucoides denotes its resemblance to Larus glaucus, a synonym of Larus hyperboreus, the glaucous gull; -oides is Ancient Greek and means "resembling".[2]
+                      </p>
+                      <a href="https://en.wikipedia.org/wiki/Iceland_gull" class="btn btn-primary">About</a>
+                    </div>
+                  </div>
+                  </div>
+                  </body>
+                  </html>
+                  
