--- a/birds.html
+++ b/birds.html
@@ -166,7 +166,7 @@
                     </div>
                     <div class="form-group">
                       <label for="bird" class="form-label">Bird</label>
-                      <input type="text" class="form-control" for="bird" >
+                      <input type="text" class="form-control" for="bird" placeholder="Enter your choice of bird" >
                       <div id="birdChoice" class="form-text">Enter your bird.</div>
                     </div>
                     <div class=" form-check">
